--- a/progettocasa.html
+++ b/progettocasa.html
@@ -22,10 +22,10 @@
 				<a-entity>
 				<a-animation attribute="rotation" to="0 0 360" dur="5000" easing='linear' repeat="indefinite"></a-animation>
 				
-					<a-entity gltf-model="src: url(Scena0.gltf); " scale="0.02 0.02 0.02"; rotation="90 0 180"; position="0 0 0.5"></a-entity>
-					<a-entity gltf-model="src: url(Scena1.gltf); " scale="0.02 0.02 0.02"; rotation="90 0 180"; position="0 0 0.5"></a-entity>
-					<a-entity gltf-model="src: url(Scena2.gltf); " scale="0.02 0.02 0.02"; rotation="90 0 180"; position="0 0 0.5"></a-entity>
-					<a-entity gltf-model="src: url(Scena3.gltf); " scale="0.02 0.02 0.02"; rotation="90 0 180"; position="0 0 0.5"></a-entity>
+					<a-entity gltf-model="src: url(scena0.gltf); " scale="0.02 0.02 0.02"; rotation="90 0 180"; position="0 0 0.5"></a-entity>
+					<a-entity gltf-model="src: url(scena1.gltf); " scale="0.02 0.02 0.02"; rotation="90 0 180"; position="0 0 0.5"></a-entity>
+					<a-entity gltf-model="src: url(scena2.gltf); " scale="0.02 0.02 0.02"; rotation="90 0 180"; position="0 0 0.5"></a-entity>
+					<a-entity gltf-model="src: url(scena3.gltf); " scale="0.02 0.02 0.02"; rotation="90 0 180"; position="0 0 0.5"></a-entity>
 
 				</a-entity>      
 			</a-sphere>
