--- a/progettocasa.html
+++ b/progettocasa.html
@@ -22,10 +22,14 @@
 				<a-entity>
 				<a-animation attribute="rotation" to="0 0 360" dur="5000" easing='linear' repeat="indefinite"></a-animation>
 				
-					<a-entity gltf-model="src: url(scena0[1].gltf); " scale="1 1 1"; rotation="90 0 180"; position="0 0 0.5"></a-entity>
-					<a-entity gltf-model="src: url(scena1[1].gltf); " scale="0.02 0.02 0.02"; rotation="90 0 180"; position="0 0 0.5"></a-entity>
-					<a-entity gltf-model="src: url(scena2[1].gltf); " scale="0.02 0.02 0.02"; rotation="90 0 180"; position="0 0 0.5"></a-entity>
-					<a-entity gltf-model="src: url(scena3[1].gltf); " scale="0.02 0.02 0.02"; rotation="90 0 180"; position="0 0 0.5"></a-entity>
+					<a-entity gltf-model="src: url(scena0[1].gltf); " scale="10 10 10"; rotation="90 0 180"; position="0 0 0.5">
+					<a-animation attribute="rotation" to="0 0 360" dur="5000" easing='linear' repeat="indefinite"></a-animation></a-entity>
+					<a-entity gltf-model="src: url(scena1[1].gltf); " scale="5 5 5"; rotation="90 0 90"; position="0 15 0.5">
+					<a-animation attribute="rotation" to="0 0 360" dur="5000" easing='linear' repeat="indefinite"></a-animation></a-entity>
+					<a-entity gltf-model="src: url(scena2[1].gltf); " scale="3 3 3"; rotation="90 0 180"; position="0 0 0.5">
+					<a-animation attribute="rotation" to="0 360 0" dur="5000" easing='linear' repeat="indefinite"></a-animation></a-entity>
+					<a-entity gltf-model="src: url(scena3[1].gltf); " scale="2 2 2"; rotation="90 0 180"; position="0 0 0.5">
+					<a-animation attribute="rotation" to="0 360 0" dur="5000" easing='linear' repeat="indefinite"></a-animation></a-entity>
 
 				</a-entity>      
 			</a-sphere>
