--- a/progettocasa.html
+++ b/progettocasa.html
@@ -20,7 +20,7 @@
 
 			<a-sphere material='opacity: 0.2' radius="0.7" color="red" roughness="0.5">
 				<a-entity>
-				<a-animation attribute="rotation" to="0 0 360" dur="5000" easing='linear' repeat="indefinite"></a-animation>
+				<!--<a-animation attribute="rotation" to="0 0 360" dur="5000" easing='linear' repeat="indefinite"></a-animation>-->
 				
 					<a-entity gltf-model="src: url(scena0[1].gltf); " scale="0.04 0.04 0.04"; rotation="90 90 90"; position="0 0 0.5">
 					<a-animation attribute="rotation" to="0 0 360" dur="5000" easing='linear' repeat="indefinite"></a-animation></a-entity>
