--- a/progettocasa.html
+++ b/progettocasa.html
@@ -20,15 +20,15 @@
 
 			<a-sphere material='opacity: 0.2' radius="0.7" color="red" roughness="0.5">
 				<a-entity>
-				<!--<a-animation attribute="rotation" to="0 0 360" dur="5000" easing='linear' repeat="indefinite"></a-animation>-->
+				<a-animation attribute="rotation" to="0 0 360" dur="5000" easing='linear' repeat="indefinite"></a-animation>
 				
-					<a-entity gltf-model="src: url(scena0[1].gltf); " scale="0.04 0.04 0.04"; rotation="0 0 90"; position="0 0 0.5">
+					<a-entity gltf-model="src: url(scena0[1].gltf); " scale="0.04 0.04 0.04"; rotation="90 0 90"; position="0 0 0.5">
 					<a-animation attribute="rotation" to="0 0 360" dur="5000" easing='linear' repeat="indefinite"></a-animation></a-entity>
-					<a-entity gltf-model="src: url(scena1[1].gltf); " scale="0.02 0.02 0.02"; rotation="0 0 0"; position="0 1 0.5">
-					<a-animation attribute="rotation" to="0 0 0" dur="5000" easing='linear' repeat="indefinite"></a-animation></a-entity>
-					<a-entity gltf-model="src: url(scena2[1].gltf); " scale="0.008 0.008 0.008"; rotation="0 0 0"; position="0 0 0.9">
+					<a-entity gltf-model="src: url(scena1[1].gltf); " scale="0.02 0.02 0.02"; rotation="90 0 90"; position="0 15 0.5">
+					<a-animation attribute="rotation" to="0 0 360" dur="5000" easing='linear' repeat="indefinite"></a-animation></a-entity>
+					<a-entity gltf-model="src: url(scena2[1].gltf); " scale="0.008 0.008 0.008"; rotation="90 0 180"; position="0 0 0.9">
 					<a-animation attribute="rotation" to="0 360 0" dur="5000" easing='linear' repeat="indefinite"></a-animation></a-entity>
-					<a-entity gltf-model="src: url(scena3[1].gltf); " scale="0.005 0.005 0.005"; rotation="0 0 0"; position="0 0 -0.5">
+					<a-entity gltf-model="src: url(scena3[1].gltf); " scale="0.005 0.005 0.005"; rotation="90 0 180"; position="0 0 -0.5">
 					<a-animation attribute="rotation" to="0 360 0" dur="5000" easing='linear' repeat="indefinite"></a-animation></a-entity>
 
 				</a-entity>      
