--- a/progettocasa.html
+++ b/progettocasa.html
@@ -25,7 +25,11 @@
 				</a-entity>  
 				<a-entity>
 				<a-animation attribute="rotation" to="0 0 360" dur="5000" easing='linear' repeat="indefinite"></a-animation>
-					<a-entity gltf-model="src: url(scena1[1].gltf); " scale="0.04 0.04 0.04"; rotation="180 0 90"; position="0 0.5 0.5"></a-entity>
+					<a-entity gltf-model="src: url(scena1[1].gltf); " scale="0.05 0.05 0.05"; rotation="180 0 90"; position="0 0.5 0.5"></a-entity>
+				</a-entity>
+				<a-entity>
+				<a-animation attribute="rotation" to="0 0 360" dur="5000" easing='linear' repeat="indefinite"></a-animation>
+					<a-entity gltf-model="src: url(scena1[1].gltf); " scale="0.05 0.05 0.05"; rotation="180 0 90"; position="0.5 0 0.5"></a-entity>
 				</a-entity>
 				<a-entity>
 				<a-animation attribute="rotation" to="0 0 360" dur="5000" easing='linear' repeat="indefinite"></a-animation>
