--- a/progettocasa.html
+++ b/progettocasa.html
@@ -33,6 +33,10 @@
 				</a-entity>
 				<a-entity>
 				<a-animation attribute="rotation" to="0 0 360" dur="5000" easing='linear' repeat="indefinite"></a-animation>
+					<a-entity gltf-model="src: url(scena1[1].gltf); " scale="0.05 0.05 0.05"; rotation="180 0 90"; position="0.5 0.5 0"></a-entity>
+				</a-entity>
+				<a-entity>
+				<a-animation attribute="rotation" to="0 0 360" dur="5000" easing='linear' repeat="indefinite"></a-animation>
 					<a-entity gltf-model="src: url(scena2[1].gltf); " scale="0.008 0.008 0.008"; rotation="90 0 180"; position="0 0 0.9"></a-entity>
 				</a-entity>
 				<a-entity>
